--- a/MaterialDesignTest/MainWindow.xaml
+++ b/MaterialDesignTest/MainWindow.xaml
@@ -150,6 +150,14 @@
                         <materialDesign:PackIcon Kind="Send" />
                     </MenuItem.Icon>
                 </MenuItem>
+
+                <MenuItem Header="Storyboard en cours"
+                          Command="{Binding DataContext.AskStoryboardCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                          CommandParameter="{x:Null}">
+                    <MenuItem.Icon>
+                        <materialDesign:PackIcon Kind="Lightbulb" />
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
 
             <MenuItem Header="_Affichage">
