--- a/MaterialDesignTest/Views/Modules/StoryBoardElementActionView.xaml
+++ b/MaterialDesignTest/Views/Modules/StoryBoardElementActionView.xaml
@@ -20,7 +20,7 @@
             <Button Content="AJOUTER" Command="{Binding Parent.AddStoryBoardElementCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
             <Button Content="SUPPRIMER" Command="{Binding Parent.DeleteStoryBoardElementCommand}" CommandParameter="{Binding Parent.CurrentElement}" Margin="0 8 0 8" />
             <Button Content="ENVOYER" Command="{Binding Parent.SendStoryBoardCommand}" CommandParameter="{Binding Parent.CurrentElement}" Margin="0 8 0 8" />
-            <Button Content="SAUVEGARDER" Command="{Binding Parent.SaveStoryBoardCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
+            <Button Content="SAUVEGARDER" Command="{Binding Parent.SaveCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
         </StackPanel>
         <Separator />
     </StackPanel>
